# mcp_starter_template

./: .gitignore  Makefile  README.md  pyproject.toml  start_cli.sh  start_web.sh
config/: servers.json
scripts/: cli.py  dev.py  run_evaluations.py  streamlit.py
src/interfaces/cli/: app.py
src/interfaces/web/: app.py
src/interfaces/web/components/: chat.py  sidebar.py
src/interfaces/web/core/: initialization.py  processing.py  session_state.py
src/interfaces/web/utils/: async_bridge.py
src/mcp_client/config/: manager.py
src/mcp_client/llm/: client.py  conversation.py
src/mcp_client/servers/: connection.py  registry.py
src/mcp_client/tools/: schemas.py
src/mcp_servers/example/: main.py
src/mcp_servers/example_tool/: main.py
src/utils/: logging_config.py
tests/unit/: test_config.py  test_tools.py
